v0.0.7

v0.0.6

* [BGBUILD-115] PackageHelper should take directory instead of file list to package

v0.0.5

* [BGBUILD-105] No plugin-manager require for local delivery plugin

v0.0.4

* [BGBUILD-85] Adjust BoxGrinder spec files for review

v0.0.3

* Simplifying after PackageHelper update

v0.0.2

* [BGBUILD-51] Local delivery plugin missing require

v0.0.1

* First release
